# Mako

./: .gitignore  README.md  README_CN.md  math-katex-compatibility-test.md  package-lock.json  package.json  tsconfig.json  vite.tauri.config.ts
.github/workflows/: tauri-windows.yml
docs/: tauri-migration-plan.md  workspace-sidebar-theme-plan.md
resources/: icon.icns
scripts/: dist-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  watch.rs  window.rs
src/renderer/: i18n.ts  index.html  main.ts
src/renderer/desktop/: api.ts  tauri-adapter.ts
src/renderer/editor/: editor.ts  html-view.ts  math-view.ts  math.ts  mermaid-view.ts
src/renderer/shell/: app-shell.ts  settings-panel.ts
src/renderer/sidebar/: sidebar.ts  tree.ts
src/renderer/store/: app-store.ts
src/renderer/themes/: base.css  theme-manager.ts
src/shared/: desktop.ts  language.ts  localization.ts
