[package]
name = "mako"
version = "1.2.0"
description = "Mako, the agent-native Markdown editor"
authors = ["marswave.ai <hello@marswave.ai>"]
license = "MIT"
repository = "https://github.com/marswaveai/colamd"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mako_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
notify = "6.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSError", "NSObject", "NSString"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "block2"] }
